--- a/src/components/layout.module.sass
+++ b/src/components/layout.module.sass
@@ -90,11 +90,13 @@ p
     //     z-index: -1
 
 .header
+    display: grid
+    grid-template-columns: 75% auto
     background-color: $black
     text-align: center
     color: $white
     margin: 0
-    padding: .5rem 2rem
+    padding: 0 2rem .5rem 2rem
 
     h1
         margin: 0
@@ -105,6 +107,32 @@ p
     a
         text-decoration: none
         color: inherit
+        
+    input
+        display: block
+        margin: .25rem .5rem
+        border-image-source: linear-gradient(15deg, #de6161, #89fffd)
+        border-width: 3px
+        border-image-slice: 1
+        background-color: rgba($white, .2)
+        outline: none
+        color: $white
+        padding: 5px 10px 2px 10px
+        font-size: 16px
+        font-family: 'Vollkorn', 'Times New Roman', Times, serif
+        line-height: 14px
+        transition: all .75s ease
+
+        &::placeholder
+            color: rgba($white, .8)
+            font-family: 'Vollkorn SC', 'Times New Roman', Times, serif
+        
+        &:focus
+            background-color: rgba($white, .9)
+            color: $black
+
+            &::placeholder
+                color: rgba($black, .7)
     
 footer
     p
