--- a/src/components/layout.module.sass
+++ b/src/components/layout.module.sass
@@ -59,6 +59,14 @@ p
     h2
         @extend h4
         margin: 0 0 .75rem 0
+    
+    &.has_columns
+        display: grid
+        grid-template-columns: repeat(2, 1fr)
+
+        img
+            max-width: 300px
+            float: right
 
 .drawer_closed
     @extend .drawer
@@ -124,6 +132,10 @@ p
     a
         text-decoration: none
         color: inherit
+        transition: all .75s ease
+
+        &:hover
+            opacity: .6
         
     input
         display: block
