--- a/src/components/layout.module.sass
+++ b/src/components/layout.module.sass
@@ -115,6 +115,9 @@ p
             border-bottom: 1px solid $white
             transition: all .5s ease
 
+            &:not(:last-of-type)
+                margin-right: 1.5rem
+
             &:hover
                 opacity: .6
 
