--- a/src/components/layout.module.sass
+++ b/src/components/layout.module.sass
@@ -59,6 +59,11 @@ p
     h2
         @extend h4
         margin: 0 0 .75rem 0
+
+        small
+            margin-left: 1rem
+            font-weight: light
+            font-size: .7em
     
     &.has_columns
         display: grid
@@ -172,6 +177,7 @@ footer
 
 ::-webkit-scrollbar
     display: none
+    
 
 // html
 //   font-family: sans-serif
