feat: clean up about page, add contributing info

--- a/src/assets/sass/02-components/_slide.sass
+++ b/src/assets/sass/02-components/_slide.sass
@@ -14,8 +14,11 @@
     height: calc(400px - calc(1rem * 2))
 
     a
-        text-decoration: none
         color: inherit
+
+    &.slide--navigation
+        a
+            text-decoration: none
 
     &:last-child
         position: relative
